--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 clap = { version = "3.0.8", features = ["derive"] }
+tokio = { version = "1.15.0", features = ["full"] }
 
 serde_json = "1.0"
