--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,4 @@
+cargo-features = ["edition2021"]
 [package]
 name = "project_builder"
 version = "0.1.0"
@@ -7,7 +8,8 @@ edition = "2021"
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
-clap = { version = "3.0.8", features = ["derive"] }
+clap = { version = "3", features = ["derive"] }
 tokio = { version = "1.15.0", features = ["full"] }
 
 serde_json = "1.0"
+dirs = "4.0.0"
